vix/tests/checker-corpus/reject/duplicate-type.vix
struct Thing;

enum Thing {
    A,
}

fn main() -> Int {
    1
}
